# stdBLAS

include/experimental/__p1673_bits/: blas3_matrix_product.hpp
tests/: CMakeLists.txt
tests/hpx-based/: CMakeLists.txt  add_rank2_hpx.cpp  dot_hpx.cpp  gemm_C_AB_hpx.cpp  gtest_fixtures.hpp  gtest_main_hpx.cpp  helpers.hpp  overwriting_matrix_vector_product_hpx.cpp  scale_rank2_hpx.cpp  updating_matrix_vector_product_hpx.cpp
tests/native/: CMakeLists.txt
tests/perf-tests/: CMakeLists.txt  add.cpp  dot.cpp  gemm.cpp  gemm_all.cpp  gemm_all_.cpp  gemm_blocked.cpp  gemm_blocked_mdspan.cpp  gemm_blocked_mdspan_hpx.cpp  gemm_hpx.cpp  gemv.cpp  gemv_blocked.cpp  gemv_main.hpp  helpers.hpp
tpl-implementations/include/experimental/: linalg_hpxkernels
tpl-implementations/include/experimental/__p1673_bits/hpx-kernels/: blas1_add_hpx.hpp  blas1_dot_hpx.hpp  blas1_scale_hpx.hpp  blas2_gemv_hpx.hpp  blas3_overwriting_gemm_hpx.hpp  mditerator.hpp  static_extent_match.hpp
tpl-implementations/include/experimental/__p1673_bits/kokkos-kernels/: blas2_gemv_kk.hpp
